<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarLogin"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/actionbarLogin"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/txtinfoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hesab_n_zla_giri_yap_n"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:textSize="20sp"
            />
        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/txtemailLogin"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />
        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/txtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/sifre"
            />

        <Button
            android:drawableBottom="@drawable/ic_baseline_person_outline_243"
            android:layout_marginTop="30dp"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giri_yap"
            android:background="@drawable/corner5"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"

            />
        <Button
            android:drawableBottom="@drawable/ic_baseline_person_outline_243"
            android:id="@+id/btnRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/yeni_hesap_olu_tur"
            android:background="@drawable/corner5"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>

</RelativeLayout>