<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:background="@drawable/friend_corner"
        android:textColor="@color/colorBlack"
        android:layout_weight="1"
        android:id="@+id/number"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/number" />

    <TextView
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/_06_01_2021"
        android:background="@drawable/friend_corner"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/friend_corner"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ki_iyi_silmek_in_smin_zerine_t_klay_n_z"
        android:id="@+id/desc"/>

</LinearLayout>

