<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/original"
    android:layout_height="match_parent"
    tools:context=".kullaniciAyarlari">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="20dp"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/circularimageview"
        android:src="@drawable/trans"
        android:layout_centerHorizontal="true"
        app:civ_border_overlay="true"
        app:civ_border_width="10dp"/>

    <EditText
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:drawableStart="@drawable/ic_baseline_person_24b"
        android:id="@+id/kullaniciadiayarla"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/ad_n_g_ncelle"
        android:layout_below="@id/circularimageview"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:drawableStart="@drawable/ic_baseline_date_range_24b"
        android:id="@+id/kullanicidurum"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/durumunu_g_ncelle"
        android:layout_below="@id/kullaniciadiayarla"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>


    <Button
        android:textColor="@color/colorWhite"
        android:id="@+id/ayarlariguncellemebutonu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g_ncelle"
        android:layout_below="@id/kullanicidurum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/cornerkullanici"/>
    <Button
        android:textColor="@color/colorWhite"
        android:background="@drawable/cornerkullanici"
        android:id="@+id/geridönüs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geri_d_n"
        android:layout_below="@id/ayarlariguncellemebutonu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


</RelativeLayout>